k8s/services/external/app/home-assistant/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
addressType: FQDN
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - homeassistant.bar.risson.net
    conditions: {}
