k8s/services/external/app/home-assistant/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - home.risson.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: home-assistant
          port: 8123
