k8s/services/external/app/home-assistant/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: home.risson.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: http
  tls:
    - hosts:
        - home.risson.space
      secretName: home-assistant-tls
